--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
 			<a onclick="menu.ctrl(false)" style="position: absolute;right: 0;top: 0;height: 56px;width: 56px;text-align: center;line-height: 56px;padding:16px;margin:0;cursor:pointer">
 				<img src="about/img/ic_close_black.png" style="display:inline-block">
 			</a>
-			<a href="Index.html">
+			<a href="index.html">
 				<i class="fa fa-home" style="color:#D64438"></i>
 				<span>Home</span>
 			</a>
