--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 		</div>
 		<div class="collapse navbar-collapse navbar-right" id="MainMenu">
 		<ul class="nav navbar-nav">
-			<li ><a href="Index.html">HOME</a></li>
+			<li ><a href="index.html">HOME</a></li>
 			<li ><a href="event.html">REGISTER</a></li>
 			<li><a href="about.html">ABOUT US</a></li>
 			<li class="active"><a href="#">CONTACT US</a></li>
