--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="js/bootstrap.min.js"></script>
 <style type="text/css">
 	body {
-    background-image:url('video/videos.gif') !important;
+    background-image:url('videos.gif') !important;
     background-size:100% 100%;
     background-repeat: repeat-y;
     background-attachment: fixed;
