--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ z-index: 1;
         <li class="active"><a href="#">HOME</a></li>
         <li><a href="event.html">REGISTER</a></li>
         <li><a href="about.html">ABOUT US</a></li>
-        <li><a href="Contact.html">CONTACT US</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
       </ul>
      
     </div>
