--- a/event.html
+++ b/event.html
@@ -104,7 +104,7 @@ pApp.controller('postController', function($scope, $http){
         <li ><a href="index.html">HOME</a></li>
         <li class="active"><a href="#">REGISTER</a></li>
         <li><a href="about.html">ABOUT US</a></li>
-        <li><a href="Contact.html">CONTACT US</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
       </ul>
      
     </div>
